<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BaiduImagesBrowse</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="title_activity_show_abs">描述</string>
    <string name="title_activity_show_wh">分辨率</string>
    <string name="username">帐号：</string>
    <string name="login_account_hint">输入账号</string>
    <string name="login_password">密码：</string>
    <string name="login_password_hint">输入密码</string>
    <string name="login_rememberMe">记住我的登录信息</string>
    <string name="login">登录</string>
    <string name="user_info">用户信息</string>
    <string name="user_name">昵称：</string>
    <string name="user_name_edit">请填写你的昵称</string>
    <string name="user_birthday">生日：</string>
    <string name="user_birthday_edit">你的生日</string>
    <string name="user_sex">性别：</string>
    <string name="user_sex_0">女</string>
    <string name="user_sex_1">男</string>
    <string name="user_hobby">爱好：</string>
    <string name="user_hobby_edit">请输入您的爱好，用逗号隔开</string>
    <string name="enter">确定</string>
    <string name="title_activity_camera">拍照</string>
    <string name="title_activity_clip">ClipActivity</string>
    <string name="rephotograph">重拍</string>
    <string name="clip">裁剪</string>
    <string name="next">下一步</string>

</resources>
